.snakemake/log/2022-06-01T141353.615960.snakemake.log
Full Traceback (most recent call last):
  File "/opt/miniconda3/envs/snakemake/lib/python3.10/site-packages/snakemake/__init__.py", line 593, in snakemake
    workflow.include(
  File "/opt/miniconda3/envs/snakemake/lib/python3.10/site-packages/snakemake/workflow.py", line 1182, in include
    exec(compile(code, snakefile.get_path_or_uri(), "exec"), self.globals)
  File "/home/jeszyman/repos/cfdna-cna/workflow/cfdna_wgs_cna.smk", line 136
    				return config [ "" ] { 'foo' : '{wildcards.token}.txt' . format ( wildcards = wildcards ) }
    				                     ^
SyntaxError: invalid syntax

SyntaxError in line 136 of /home/jeszyman/repos/cfdna-cna/workflow/cfdna_wgs_cna.smk:
invalid syntax (cfdna_wgs_cna.smk, line 136)
